<resources>
    <string name="app_name">Sensing light</string>
    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_settings">Settings</string>

    <string name="preference_file_key">org.gtdev.apps.sensinglight.PREFERENCE</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch activity</string>
    <string name="start_location_updates_button_text">Show</string>
    <string name="stop_location_updates_button_text">Stop</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="ok">OK</string>
    <string name="widget_str_sensor_status">Sensor status</string>
    <string name="widget_str_speed">Speed (m/s)</string>
    <string name="widget_str_altitude">Altitude (m)</string>
    <string name="widget_str_latitude">Latitude</string>
    <string name="widget_str_longitude">Longitude</string>
    <string name="widget_str_waiting_gps">Looking for GPS location</string>

    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="str_number_of_records">Number of records</string>
    <string name="btn_export">Export</string>
    <string name="msg_log_copied">Copied</string>
    <string name="btn_logcat">Logcat</string>
    <string name="title_activity_logcat">Logcat</string>
    <string name="btn_upload">Upload</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="profile_about_you">Your smart light</string>
</resources>